Closed Bug 715924 Opened 14 years ago Closed 14 years ago

pop3 move mail filters not truncating inbox correctly

Categories

(MailNews Core :: Backend, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 12.0

People

(Reporter: Bienvenu, Assigned: Bienvenu)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Pop3 move mail filters aren't truncating the inbox correctly after a move (i.e., berkeley mailbox discard message doesn't seem to be working). You can see this if you repair the inbox after getting new mail, and the filtered mail shows up again in the inbox.
Attached patch proposed fix (obsolete) — Splinter Review
I'll try to come up with a unit test for this, but this patch fixes it.
adds a unit test - I've done a push to try with this patch - http://build.mozillamessaging.com/tinderboxpushlog?tree=ThunderbirdTry&rev=869d86b614a7
Attachment #586855 - Attachment is obsolete: true
Attachment #587020 - Flags: review?(mbanner)
Attachment #587020 - Flags: review?(mbanner) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 12.0
bienvenu, this is a regression from which bug?
(In reply to Wayne Mery (:wsmwk) from comment #4) > bienvenu, this is a regression from which bug? the pluggable store work, bug 402392
Blocks: 402392
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: