fix pop3 move filters truncation of inbox, r=standard8, bug 715924